force-app/main/default/objects/History__c/fields/Loan_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Full_Name__c</fullName>
    <formula>Loan__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Full Name</label>
    <type>Text</type>
</CustomField>