force-app/main/default/objects/History__c/fields/Wire_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Full_Name__c</fullName>
    <formula>Wire_Transfer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wire Full Name</label>
    <type>Text</type>
</CustomField>