force-app/main/default/objects/History__c/fields/Wire_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wire Transfer</label>
    <referenceTo>Wire_Transfer__c</referenceTo>
    <relationshipLabel>History</relationshipLabel>
    <relationshipName>History</relationshipName>
    <type>Lookup</type>
</CustomField>