force-app/main/default/objects/History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Wire_Full_Name__c</columns>
    <columns>Loan_Full_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>